-fix burger menu toggle on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,5 @@
     --bulma-primary-h: 0deg;
     --bulma-primary-s: 0%;
     --bulma-primary-l: 89%;
+    --bulma-navbar-burger-color:var(--bulma-dark);
   }  
